tests/fail/bad-signature-use-1.astr
module bad-signature-use-1

attributes

  decorator foo(a, b) =
    b.signature
